feat(backend): add OrderController and fix UserController
